# agentmail-examples

./: .env.example  .gitignore  CROSSPOST.md  README.md  candidates.csv  job_config.json  package-lock.json  package.json  pyproject.toml  standard_terms.json
agent-pen-pal/: CROSSPOST.md  README.md  config.json
agentmail-approval-inbox/: .gitignore
agentmail-docs-assistant/: README.md
agentmail-gtm-agent/: .gitignore  README.md
agentmail-inbox-zero/: LICENSE
agentmail-invoice-processor/: .gitignore
agentmail-mastra-template/: CROSSPOST.md  README.md  package.json
agentmail-negotiation-agent/: .gitignore  README.md
agentmail-sales-signal-router/: .gitignore
agentmail-scheduling-agent/: .gitignore
agentmail-support-agent/: .gitignore
auto-reply-agent/: README.md  agent.py  requirements.txt
autosign/: README.md
browser-signup-agent/: README.md
cc-the-agent/: .env.example  CROSSPOST.md  README.md
cold-email-researcher/: .env.example  CROSSPOST.md  README.md  prospects.csv
collections-agent/: .env.example  CROSSPOST.md  invoices.csv
contract-redline-agent/: .env.example  CROSSPOST.md
dinner-agent-webhook/: README.md  main.py  pyproject.toml
email-agent/: README.md  main.py  pyproject.toml
email-summary-agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sample_emails.json  setup_inbox.py  summary_agent.py
email-to-cli/: .env.example  CROSSPOST.md  README.md  requirements.txt
hiring-screener-agent/: .env.example  CROSSPOST.md  README.md
inbox-zero/: README.md
langchain/: README.md
langchain-terminal/: README.md  pyproject.toml
legal-intake-agent/: CROSSPOST.md  attorneys.json
n8n-workflow/: README.md  n8n.json
newsletter-digest/: .gitignore
nextjs-agentmail-starter/: CROSSPOST.md  README.md  package.json
oauth-reset-handler/: .env.example  CROSSPOST.md  README.md
openai-terminal/: README.md  (+1 more)
sales-agent-websocket/: .env.example  README.md  main.py  pyproject.toml
(+219 files in other folders)
